# python-linz-logger

./: .gitignore  .kodiak.toml  .pre-commit-config.yaml  CHANGELOG.md  LICENSE  README.md  pyproject.toml  release-please-config.json  shell.nix
.github/: CODEOWNERS
.github/workflows/: ci.yml  release-please.yml
linz_logger/: __init__.py  logger.py  ot_attributes.py  ot_resources.py  test_logger.py
scripts/: version.bump.sh
