[tool.poetry]
name = "linz_logger"
version = "0.12.0"
description = "LINZ standard Logging format"
authors = ["Blayne <bchard@linz.govt.nz>", "Megan <mdavidson@linz.govt.nz>", "Victor <vengmark@linz.govt.nz>", "Alice <afage@linz.govt.nz>", "Paul <pfouquet@linz.govt.nz>"]
license = "MIT"

readme = "README.md"

repository = "https://github.com/linz/python-linz-logger"

keywords = ["LINZ", "logging"]

[tool.poetry.dependencies]
python = "~3.12.3"
structlog = "^23.2.0"
python-ulid = "^1.1.0"

[tool.poetry.group.dev.dependencies]
black = "^24.1.1"
isort = ">=5.13.1,<7.0.0"
mypy = "*"
pre-commit = "*"
pylint = "^3.0.2"
pytest = ">=7.4.4,<9.0.0"
pytest-dependency = "^0.6.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 127

[tool.isort]
line_length = 127
case_sensitive = true
use_parentheses = true
include_trailing_comma = true
multi_line_output = 3
force_grid_wrap = 0
